--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,13 +1,12 @@
 .gridcontainer {
      display: grid;
-     grid-template-rows: 200px 1fr;
+     grid-template-rows: 200px auto 1fr;
      height: 100vh;
      margin: 0;
      padding: 0;
 }
 
 .gridTop {
-     padding: 20px;
      display: flex;
      flex-direction: column;
      align-items: center;
@@ -26,4 +25,11 @@
 .buttonStyle {
      padding: 20px 35px;
      font-size: 1.5rem;
+}
+
+.timerArea {
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     height: auto;
 }
