--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -14,22 +14,21 @@
      color: white;
 }
 
-.gridBottom {
-     display: flex;
-     justify-content: center;
-     align-items: center;
-     max-height: 80%;
-     overflow: none;
-}
-
-.buttonStyle {
-     padding: 20px 35px;
-     font-size: 1.5rem;
-}
-
 .timerArea {
      display: flex;
      justify-content: center;
      align-items: center;
      height: auto;
+}
+
+.gridBottom {
+}
+
+.buttonStyle {
+     height: 65px;
+     width: 150px;
+     font-size: 1.5rem;
+     border-radius: 10px;
+     background-color: #4caf50;
+     color: white;
 }
